--- a/frontendfiles/css/admin-dashboard.css
+++ b/frontendfiles/css/admin-dashboard.css
@@ -5,7 +5,7 @@
   width: 50px;
   border: 6px solid white;
   border-radius: 50%;
-  background-color: #007bff;
+  background-color: #198754;
   text-align: center;
   color: white;
 }
