--- a/frontendfiles/css/admin-dashboard.css
+++ b/frontendfiles/css/admin-dashboard.css
@@ -3,11 +3,9 @@
   line-height: 40px;
   height: 50px;
   width: 50px;
-  border: 6px solid white;
+  border: 6px solid #198754;
   border-radius: 50%;
-  background-color: #198754;
   text-align: center;
-  color: white;
 }
 
 .card {
