--- a/full-stack-files/templates/guests/login.html
+++ b/full-stack-files/templates/guests/login.html
@@ -79,7 +79,7 @@
     </div>
 
     <!-- Footer -->
-    {% import 'partials/_footer.html' %}
+    {% include 'partials/_footer.html' %}
 
 </body>
 
