--- a/full-stack-files/templates/Teams/team-dashboard.html
+++ b/full-stack-files/templates/Teams/team-dashboard.html
@@ -1,73 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <!-- Bootstrap Icons CDN -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <!-- FontAwesome Icons CDN-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <!-- DataTable CSS -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
-    <!-- Side bar css -->
-    <link rel="stylesheet" href="css/sidebar.css">
-    <!-- Navbar css -->
-    <link rel="stylesheet" href="css/navbar.css">
-    <!-- Custom CSS for page -->
-    <link rel="stylesheet" href="css/team-dashboard.css">
-
-    <!-- Page Title -->
-    <title>Resources Dashboard | COVID Resource Monitor</title>
-</head>
-
-<body>
-    <!-- Define the whole page in a container -->
-
-    <!-- Navbar -->
-    <nav id="custom-content-navbar" class="navbar navbar-expand-lg navbar-expand-md navbar-dark container-fluid">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <h4><i class="fab fa-medrt"></i> COVID Resource Monitor</h4>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">
-                            <h5><i class="bi bi-card-checklist"></i> Dashboard</h5>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">
-                            <h5><i class="bi bi-node-plus"></i> Add/Modify Leads</h5>
-                        </a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-person-circle"></i> User's Name
-                        </a>
-                        <ul class="dropdown-menu container" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
+{% extends 'base.html' %}
+{% block content %}
     <!-- Content Box -->
     <div class="container-fluid mt-5">
         <div class="row">
@@ -209,87 +142,5 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <section class="container-fluid fixed-bottom" id="footer">
-        <div class="row footer">
-            <div class="col-lg-12 text-center">
-                &copy;
-                <script>document.write(new Date().getFullYear())</script> Covid Resource Monitor
-            </div>
-        </div>
-    </section>
-
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Lead Details</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            <b>Lead Name</b>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            Insert lead name here
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            <b>Contact Number</b>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            Insert contact no. here
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            <b>Email</b>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            Insert email here
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            <b>Address</b>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            Insert address here
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            <b>Google Map link</b>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            Insert GMaps URL here
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- JavaScript Bundle with Popper ; If fails, try to put in BODY -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-        crossorigin="anonymous"></script>
-    <!-- jQuery CDN -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <!-- DataTable JS  -->
-    <script type="text/javascript" charset="utf8"
-        src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
-    <!-- JS File -->
-    <script src="js/guest-dashboard.js"></script>
-
-</body>
-
-</html>
+    {% endblock %}
+   
