--- a/full-stack-files/templates/partials/_modals.html
+++ b/full-stack-files/templates/partials/_modals.html
@@ -397,8 +397,7 @@
 </div>
 
 
-
-<!-- Modal Category-->
+<!-- Modal-4: Add Category-->
 <div class="modal fade" id="exampleModalCategory" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -466,10 +465,7 @@
     </div>
 </div>
 
-<!-- Model category -->
-
-
-<!-- Model subcategory -->
+<!-- Model-5: Add subcategory -->
 <div class="modal fade" id="exampleModalSubCategory" tabindex="-1" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog">
@@ -525,5 +521,3 @@
         </div>
     </div>
 </div>
-
-<!-- Model Subcategory over -->
