Footer style fix

--- a/full-stack-files/templates/partials/_footer.html
+++ b/full-stack-files/templates/partials/_footer.html
@@ -1,9 +1,9 @@
 <!-- Footer -->
-<section class="container-fluid fixed-bottom" id="footer">
+<footer class="container-fluid" id="footer" style="background-color: #00695c; color: #fff; margin-top: 20px;">
     <div class="row footer">
         <div class="col-lg-12 text-center">
             &copy;
             <script>document.write(new Date().getFullYear())</script> Covid Resource Monitor
         </div>
     </div>
-</section>
+</footer>
