--- a/full-stack-files/templates/partials/_footer.html
+++ b/full-stack-files/templates/partials/_footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="container-fluid position-absolute bottom=0" id="footer" style="background-color: #00695c; color: #fff; margin-top: 5rem;">
+<footer class="container-fluid position-absolute bottom=0" id="footer" style="background-color: #00695c; color: #fff; margin-top: 9%;">
     <div class="row footer">
         <div class="col-lg-12 text-center">
             &copy;
