--- a/full-stack-files/templates/guests/login.html
+++ b/full-stack-files/templates/guests/login.html
@@ -48,7 +48,7 @@
             <div class="col-sm-12 col-md-4 col-lg-4 transbox">
                 <form class="login-form">
                     <h3 class="mb-2"> <u>Login Page</u> </h3>
-                    <a href="#" class="btnForgetPwd d-flex flex-row-reverse mb-2"> Not registered? Continue as guest</a>
+                    <a href="{% url 'dashboard' %}" class="btnForgetPwd d-flex flex-row-reverse mb-2"> Not registered? Continue as guest</a>
                     <div class="form-group mt-3">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">@</span>
