--- a/full-stack-files/templates/Teams/admin-dashboard.html
+++ b/full-stack-files/templates/Teams/admin-dashboard.html
@@ -31,6 +31,15 @@
                                         </a>
                                     </div>
                                 </div>
+                                <div class="col-lg-3 col-md-6 col-sm-12">
+                                    <div class="card border btn-outline-success rounded">
+                                        <a href="" data-bs-toggle="modal" data-bs-target="#exampleModalAddUser">
+                                            <div class="card-body btn-outline-success py-3 pb-4 ">
+                                                <i class="fa fa-user-plus" aria-hidden="true"></i> <br>Add <br>User
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
