--- a/full-stack-files/templates/guests/guest-contribute.html
+++ b/full-stack-files/templates/guests/guest-contribute.html
@@ -106,6 +106,13 @@
                                 <label class="btn btn-outline-dark" for="dark-outlined">NGO / Others
                                     (Non-Profit)</label>
                             </div>
+                            <div class="col-lg-12 col-md-12 col-sm-12">
+                                <br>
+                                <div class="input-group">
+                                    <span class="input-group-text">Comments</span>
+                                    <textarea required class="form-control" aria-label="Comments" placeholder="Any additional comments"></textarea>
+                                </div>
+                            </div>
                         </div>
                         <div class="mt-3"></div>
                         <hr>
