--- a/full-stack-files/templates/partials/_modals.html
+++ b/full-stack-files/templates/partials/_modals.html
@@ -92,6 +92,13 @@
                                     <label class="btn btn-outline-dark" for="dark-outlined">NGO / Others
                                         (Non-Profit)</label>
                                 </div>
+                                <div class="col-lg-12 col-md-12 col-sm-12">
+                                    <br>
+                                    <div class="input-group">
+                                        <span class="input-group-text">Comments</span>
+                                        <textarea required class="form-control" aria-label="Comments" placeholder="Any additional comments"></textarea>
+                                    </div>
+                                </div>
                             </div>
                             <div class="mt-3"></div>
                             <hr>
@@ -263,6 +270,14 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <br>
+                        <div class="input-group ">
+                            <p class="font-weight-bold p-1">Comments:</p>
+                            <span class="rounded p-1">Any additional comments are here</span>
+
+                        </div>
+                    </div>
 
 
                     <div class="mt-3"></div>
