--- a/full-stack-files/templates/base.html
+++ b/full-stack-files/templates/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'assets/images/icon.png' %}" />
 
@@ -57,7 +57,12 @@
 
     <!-- Content Box -->
     <div class="container-fluid mt-5">
+        <!-- Alerts/messages -->
+        {% include 'partials/_alerts.html' %}
+        
+        <!-- Main content -->
         {% block content %} {% endblock %}
+        
     </div>
 
     <!-- Footer -->
@@ -67,19 +72,19 @@
     {% include 'partials/_modals.html' %}
 
 
-    <!-- JavaScript Bundle with Popper ; If fails, try to put in BODY -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-        crossorigin="anonymous"></script>
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <!-- Put in BODY -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    
     <!-- DataTable JS  -->
     <script type="text/javascript" charset="utf8"
         src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
     
     <!-- JS File -->
-    <script src="{% static 'js/datatables.js' %}"></script>
+    <script src="{% static 'js/mainscript.js' %}"></script>
 
 </body>
 
