--- a/full-stack-files/templates/guests/login.html
+++ b/full-stack-files/templates/guests/login.html
@@ -49,13 +49,17 @@
         <div class="row">
             <div class="col-sm-12 col-md-4 col-lg-4"></div>
             <div class="col-sm-12 col-md-4 col-lg-4 transbox">
-                <form class="login-form">
+                <!-- Alerts/messages -->
+                {% include 'partials/_alerts.html' %}
+                
+                <form class="login-form" action="{% url 'login' %}" method="POST">
+                    {% csrf_token %}
                     <h3 class="mb-2"> <u>Login Page</u> </h3>
                     <a href="{% url 'dashboard' %}" class="btnForgetPwd d-flex flex-row-reverse mb-2"> Not registered? Continue as guest</a>
                     <div class="form-group mt-3">
                         <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1">@</span>
-                            <input type="email" class="form-control" placeholder="Email" aria-label="Username"
+                            <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
+                            <input type="text" name="username" class="form-control" name="" placeholder="Username" aria-label="Username"
                                 aria-describedby="basic-addon1">
                         </div>
                     </div>
@@ -63,12 +67,12 @@
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1"><i class="fas fa-key"></i></span>
                             <input type="password" class="form-control" placeholder="Password" aria-label="Username"
-                                aria-describedby="basic-addon1">
+                                name="password" aria-describedby="basic-addon1">
                         </div>
                     </div>
                     <div class="form-group mt-5 row">
                         <div class="col-lg-6 col-md-6 col-sm-12">
-                            <a href="#"><button class="btnSubmit">Login</button></a>
+                            <a href="#"><button type="submit" class="btnSubmit">Login</button></a>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 mt-2">
                             <a href="#" class="btnForgetPwd">Forgot Password?</a>
