--- a/full-stack-files/templates/partials/_navbar.html
+++ b/full-stack-files/templates/partials/_navbar.html
@@ -10,66 +10,96 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                {% if 'team' in request.path %}
-                <!-- Team User -->
-                <li class="nav-item">
-                    <a 
-                    {% if 'team/teamdashboard' in request.path %}
-                    class="nav-link active"
+                {% if user.is_authenticated %}
+                    {% if 'team' in request.path %}
+                        {% if not user.is_superuser %}
+                            <!-- Team User -->
+                            <li class="nav-item">
+                                <a 
+                                {% if 'team/teamdashboard' in request.path%} 
+                                    class="nav-link active" 
+                                {% else %} 
+                                    class="nav-link"
+                                {% endif %}
+                                aria-current="page" href="{% url 'teamdashboard' %}"
+                                >
+                                    <h5><i class="bi bi-card-checklist"></i> Dashboard</h5>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a 
+                                {% if 'team/addleads' in request.path %} 
+                                    class="nav-link active" 
+                                {% else %} class="nav-link" 
+                                {% endif %}
+                                aria-current="page" href="{% url 'addleads' %}"
+                                >
+                                    <h5><i class="bi bi-node-plus"></i> Add/Modify Leads</h5>
+                                </a>
+                            </li>
+                        {% endif %}
                     {% else %}
-                    class="nav-link"
+                        <p>We may have a problem with authenticating your access!!!</p>
                     {% endif %}
-                    aria-current="page" href="{% url 'teamdashboard' %}">
-                        <h5><i class="bi bi-card-checklist"></i> Dashboard</h5>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a 
-                    {% if 'team/addleads' in request.path %}
-                    class="nav-link active"
-                    {% else %}
-                    class="nav-link"
-                    {% endif %}
-                    aria-current="page" href="{% url 'addleads' %}">
-                        <h5><i class="bi bi-node-plus"></i> Add/Modify Leads</h5>
-                    </a>
-                </li>
                 {% else %}
-                <!-- Not a team user -->
-                <li class="nav-item">
-                    <a 
-                    {% if 'dashboard' in request.path %}
-                    class="nav-link active"
-                    {% else %}
-                    class="nav-link"
-                    {% endif %}
-                    aria-current="page" href="{% url 'dashboard' %}">
-                        <h5><i class="bi bi-card-checklist"></i> Dashboard</h5>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a 
-                    {% if 'contribute' in request.path %}
-                    class="nav-link active"
-                    {% else %}
-                    class="nav-link"
-                    {% endif %} 
-                    aria-current="page" href="{% url 'contribute' %}">
-                        <h5><i class="bi bi-node-plus"></i> Contribute Leads</h5>
-                    </a>
-                </li>
+                    <!-- Not a team user, guest access -->
+                    <li class="nav-item">
+                        <a 
+                            {% if 'dashboard' in request.path %}
+                                class="nav-link active"
+                            {% else %}
+                                class="nav-link"
+                            {% endif %}
+                            aria-current="page" href="{% url 'dashboard' %}"
+                        >
+                            <h5><i class="bi bi-card-checklist"></i> Dashboard</h5>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a 
+                        {% if 'contribute' in request.path %}
+                            class="nav-link active"
+                        {% else %} 
+                            class="nav-link"
+                        {% endif %} 
+                        aria-current="page" href="{% url 'contribute' %}">
+                            <h5><i class="bi bi-node-plus"></i> Contribute Leads</h5>
+                        </a>
+                    </li>
                 {% endif %}
             </ul>
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="bi bi-person-circle"></i> User's Name
-                    </a>
-                    <ul class="dropdown-menu container" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
-                    </ul>
-                </li>
+                {% if user.is_authenticated %}
+                <!-- Authenticated user -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-circle"></i>
+                            <span>Welcome, {{user.first_name}} {{user.last_name}}</span>
+                        </a>
+                        <ul class="dropdown-menu container" aria-labelledby="navbarDropdownMenuLink">
+                            <li>
+                                <a class="dropdown-item" href="javascript:{document.getElementById('logout').submit()}"><i
+                                        class="fas fa-sign-out-alt"></i> Log Out</a>
+                                <form action="{% url 'logout' %}" method="post" id="logout">
+                                    {% csrf_token %}
+                                    <input type="hidden">
+                                </form>
+                            </li>
+                        </ul>
+                    </li>
+                {% else %}
+                <!-- Guest User -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-circle"></i> Guest User or Visitor
+                        </a>
+                        <ul class="dropdown-menu container" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="{% url 'login' %}"><i class="fas fa-sign-out-alt"></i> Log In</a></li>
+                        </ul>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
