--- a/full-stack-files/templates/Teams/team-add-modify.html
+++ b/full-stack-files/templates/Teams/team-add-modify.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% if user.is_authenticated %}
     <!-- Content Box -->
     <div class="container-fluid mt-5">
         <div class="row">
@@ -544,6 +545,6 @@
             <div class="col-md-2 col-lg-2"></div>
         </div>
     </div>
-
+{% endif %}
 {% endblock %}
    
