Completed making the admin panel functionalities

--- a/full-stack-files/templates/partials/_modals.html
+++ b/full-stack-files/templates/partials/_modals.html
@@ -426,12 +426,9 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-lg-12">
-                        <form class="needs-validation" validate>
-
+                        <form action="{% url 'addcategory' %}" method="POST" class="needs-validation" validate>
+                            {% csrf_token %}
                             <div class="form-row text-left">
-
-
-
                                 <div class="col-md-12 mb-3">
                                     <label for="Category">Category</label>
                                     <div class="input-group">
@@ -440,7 +437,7 @@
                                                     class="py-1 st fa fa-plus"></i></span>
                                         </div>
                                         <input type="text" class="form-control" id="Category" placeholder="Category"
-                                            aria-describedby="CategoryIcon" required>
+                                            aria-describedby="CategoryIcon" name="category" required>
                                         <div class="invalid-feedback">
                                             Please Enter Category.
                                         </div>
@@ -455,20 +452,16 @@
                                                     class="bi bi-subtract"></i></span>
                                         </div>
                                         <input type="text" class="form-control" id="SubCategory"
-                                            placeholder="Sub-Category" aria-describedby="SubCategoryIcon" required>
+                                            placeholder="Sub-Category" aria-describedby="SubCategoryIcon" name="subcategory" required>
                                         <div class="invalid-feedback">
                                             Please Enter Sub-Category.
                                         </div>
                                     </div>
                                 </div>
 
-
-
-
                             </div>
                             <div class="text-center">
                                 <button class="btn btn-primary" type="submit">Submit</button>
-
                             </div>
                         </form>
                     </div>
@@ -495,17 +488,14 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-lg-12">
-                        <form class="needs-validation" validate>
-
+                        <form class="needs-validation" action="{% url 'addsubcategory' %}" method="POST" validate>
+                            {% csrf_token %}
                             <div class="form-row text-left">
-
-
                                 <div class="dropdown col-md-12 col-lg-12 col-sm-12">
-                                    <select class="form-select" aria-label="select-category">
-                                        <option selected>Select Category</option>
-                                        <option value="Beds">Beds</option>
-                                        <option value="Medicine">Medicine</option>
-                                        <option value="Oxygen">Oxygen</option>
+                                    <select class="form-select" aria-label="select-category" name="category">
+                                        {% for category in categories %}
+                                        <option value="{{category}}">{{category}}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                                 <div class="col-md-12 mt-3">
@@ -516,7 +506,7 @@
                                                     class="bi bi-subtract"></i></span>
                                         </div>
                                         <input type="text" class="form-control" id="SubCategory2"
-                                            placeholder="Sub-Category" aria-describedby="SubCategoryIcon2" required>
+                                            placeholder="Sub-Category" aria-describedby="SubCategoryIcon2" name="subcategory" required>
                                         <div class="invalid-feedback">
                                             Please Enter Sub-Category.
                                         </div>
